--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 spring.batch.job.enabled=true
 
-file.path=C:/files/batch
+file.path=C:/files/batchs
+file.extension=csv
